# E3

./: .clauderules  .env.example  .gitignore  .gitmodules  CONVERSATION-HISTORY.md  LICENSE  PROJECT-STRUCTURE.md  QUICK-START-CONVERSATION-BACKUP.md  README.md  STATUS.md  auto-save-summary.sh  backup-claude-conversations.sh  convert-csdl-to-gguf.sh  save-conversation-summary.sh  setup-conversation-backup.sh  start-llama-server.sh
E3-DevMind-AI/: .env.example  Dockerfile  README.md  UX_ANALYSIS_AND_IMPROVEMENTS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-agui.txt  requirements.txt  setup.py  setup_dgx_spark.sh
E3-DevMind-AI/agents/: agui_server.py  architect.py  archon_integration.py  base_agent.py  cartographer.py  catalyst.py  collaboration.py  conductor.py  craftsman.py  critic.py  curator.py  demo_collaboration.py  demo_swarm_simulation.py  detective.py  documenter.py  economist.py  forge.py  guardian.py  historian.py  integrator.py  investigator.py  learner.py  librarian.py  navigator.py  ops.py  optimizer.py  oracle.py  oracle_kb.py  prioritizer.py  prophet.py  sage.py  scholar.py  scientist.py  sentinel.py  setup_archon_project.py  strategist.py  swarm_manager.py  synthesizer.py  system_context.py  test_archon_integration.py  (+2 more)
E3-DevMind-AI/anlt/: translator.py
E3-DevMind-AI/api/: __init__.py  rest_api.py  websocket_api.py
E3-DevMind-AI/cli/: __init__.py  devmind_cli.py  main.py
E3-DevMind-AI/csdl/: message_bus.py  protocol.py  vllm_client.py
E3-DevMind-AI/devmind_core/: config.py  main.py  models.py
E3-DevMind-AI/docs/: API_REFERENCE.md  DEPLOYMENT.md  DGX_SPARK_SETUP.md
E3-DevMind-AI/ui/: __init__.py  (+2 more)
(+82 files in other folders)
